# armv7-embedded-rust

./: .editorconfig  .gitmodules  .travis.yml  Cargo.toml  README.adoc  _.travis.yml
.cargo/: config
ci/: install.sh
devices/rt-lm3s6965/: .editorconfig  .travis.yml  Cargo.toml  README.adoc
devices/rt-lm3s6965/src/: lib.rs
